[package]
name = "mangoflow"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9.2", features = ["full"], optional = true }
async-stream = "0.3"
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1", features = ["log"] }
mimalloc = { version = "*", features = ["secure"] }
fastrace = "0.7"
log = "0.4"

[features]
default = ["ethereum", "telegram"]
ethereum = ["dep:alloy", "dep:thiserror"]
telegram = ["dep:reqwest", "dep:serde_json"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
